# json-config

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: environment.hpp
include/utils/: utils.hpp
src/: environment.cpp  main.cpp
tests/unit-tests/: CMakeLists.txt  environment-tests.cpp
